fix scrollbar mobile

--- a/src/styling/profile.scss
+++ b/src/styling/profile.scss
@@ -286,7 +286,7 @@ body {
     &-image-container {
       width: 100%;
       height: 100%;
-      padding-inline-end: 32px;
+      margin-inline-end: 32px;
     }
 
     &-about-me {
